* Misc opening times in Rigard shops fixed.
* Added a combat turn order listing, replacing the rather vague initiative listing.
* Changed the color of the sleep/wait/explore buttons to make it more clear when they are available.
* Changed color of level up button to green.
* Reduced Lei's level requirement to 3 for the moment (more is planned to make this more intuitive).

--------------------------------------------
             PREVIOUS VERSIONS
--------------------------------------------

Version 0.3l
------------
* Misc bug fixes and typos.
* Corrected a colossal cavalcade of crappy code (more typos and parser tags).
* Added shortcut keys for exploration buttons (right side): 6-0
* Gwendy no longer joins you at 100% lust.
* Cale's shop is implemented. Note that a lot of the stuff he sells is completely useless at this point in time.
* Reduced spawn rate of felines to be roughly equal to the other mobs in the plains.
* Added stat descriptions to levelup screen. Still kinda vague, but should give people a hunch of what they're getting.
* Fixed a bug in Cale where he would repeat his virgin scenes.
* Fixed a bug in Cale where the scene would break for female PCs fucking him with a strapon.
* Miranda tavern public bj.
* Added a subby Miranda sex scene: Take Anal (in her home, choose passive).
* Added the dryad glade, the next part of the main quest. Includes a bossfight and a bad end.
* Added Momo the dragon-girl (LD and QB). Only initial scenes atm.
* Added some scenes for follower Terry.
* Added a pretty expansive sex scene for follower Terry.

Version 0.3k5
-------------
* Made expToLevel more consistent with save/load.
* Fera sex fix.
* Possible fix for Ranger job.
* Fixed a bug in CocksThatFit, that might have caused some problems with Rosalin's sex scene. Possibly other scenes too.
* Fixed a stupid bug that would return the wrong cum quantity.
* Lots of typo fixes to the intro.

Version 0.3k4
-------------