@@ -13,6 +13,7 @@ Version 0.3m
 * Changed the color of the sleep/wait/explore buttons to make it more clear when they are available.
 * Changed color of level up button to green.
 * Reduced Lei's level requirement to 3 for the moment (more is planned to make this more intuitive).
+* Added a new scene to Magnus, if you went and learned magic from Jeanne (a pretty short thing, but things make more sense now).
 
 --------------------------------------------
              PREVIOUS VERSIONS
